--- a/REACT-PROJECT/tt-proyect/src/styles/Login.css
+++ b/REACT-PROJECT/tt-proyect/src/styles/Login.css
@@ -60,8 +60,8 @@
   }
   
   .form-group {
-    margin-bottom: 1.5rem;
     position: relative;
+    margin-bottom: 20px;
   }
   
   .form-control {
