--- a/REACT-PROJECT/tt-proyect/src/styles/FloatingTab.css
+++ b/REACT-PROJECT/tt-proyect/src/styles/FloatingTab.css
@@ -1,4 +1,4 @@
-.floating-tab-backdrop {
+  .floating-tab-backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -91,19 +91,38 @@
     overflow: hidden;
   }
   
+  .btn-add-income {
+    background-color: #28a745 !important;
+    color: white !important;
+    border: none !important;
+    border-radius: 5px !important;
+    padding: 5px 10px !important;
+    margin-top: 10px !important;
+    cursor: pointer !important;
+    transition: background-color 0.3s ease !important;
+    display: block !important;
+    width: 100% !important;
+  }
+  
+  .btn-add-income:hover {
+    background-color: #218838; /* Verde más oscuro al pasar el cursor */
+  }
+
   .btn-remove {
-    background-color: #e74c3c; /* Color rojo para el botón de eliminar */
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    margin-top: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    display: block; /* Asegura que el botón ocupe toda la fila */
-    width: 100%; /* Ajusta el ancho del botón para que ocupe todo el espacio disponible */
+    background-color: #e74c3c !important;
+    color: white !important;
+    border: none !important;
+    border-radius: 5px !important;
+    padding: 5px 10px !important;
+    margin-top: 10px !important;
+    cursor: pointer !important;
+    transition: background-color 0.3s ease !important;
+    display: block !important;
+    width: 100% !important;
   }
   
   .btn-remove:hover {
     background-color: #c0392b; /* Color más oscuro al pasar el cursor */
   }
+
+  
