--- a/REACT-PROJECT/tt-proyect/src/styles/IncomeDashboard.css
+++ b/REACT-PROJECT/tt-proyect/src/styles/IncomeDashboard.css
@@ -64,3 +64,27 @@
 .income-table th {
   background-color: #f2f2f2;
 }
+.chart-and-buttons {
+  display: flex;
+  justify-content: space-between; /* Alinea la gráfica y los botones */
+  align-items: center; /* Centra los elementos verticalmente */
+  margin-bottom: 20px;
+}
+
+.income-chart {
+  flex: 1; /* La gráfica ocupará la mayor parte del espacio */
+}
+
+.button-group {
+  display: flex;
+  flex-direction: column; /* Acomoda los botones verticalmente */
+  gap: 10px; /* Añade espacio entre los botones */
+}
+
+.add-income-button {
+  margin-top: 10px;
+}
+
+.filter-button {
+  margin-bottom: 10px;
+}
