mejora de funcion del calendario
ya el calendario muestra mejor los botones de editar

--- a/REACT-PROJECT/tt-proyect/src/styles/IncomeDashboard.css
+++ b/REACT-PROJECT/tt-proyect/src/styles/IncomeDashboard.css
@@ -186,3 +186,14 @@
   background-color: #add8e6; /* Azul claro */
   color: white;
 }
+
+.event-popover {
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
