PRUEBA GRUPOS VALIDACION

--- a/REACT-PROJECT/tt-proyect/src/styles/NewLayout.css
+++ b/REACT-PROJECT/tt-proyect/src/styles/NewLayout.css
@@ -3,7 +3,7 @@
     height: 100vh;
     width: 100vw;
 }
-  
+
 .sidebar {
     width: 20%;
     background-color: #2d3945;
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
 }
-  
+
 .sidebar-top {
     background-color: #2196f3;
     height: 55px;
@@ -24,7 +24,7 @@
     display: flex;
     justify-content: center;
 }
-  
+
 .sidebar-logo-container {
     background-color: #2B3D51;
     height: 30%; 
@@ -34,36 +34,36 @@
     justify-content: center;
     text-align: center;
 }
-  
+
 .logo-img {
     width: 55%;
     margin-bottom: 5px;
 }
-  
+
 .logo-text {
     font-size: 12px;
     color: white;
 }
-  
+
 .sidebar-content {
     flex-grow: 1;
     padding: 0;
 }
-  
+
 .nav-menu {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
-  
+
 .nav-menu li {
     border-bottom: 1px solid #3a4757;
 }
-  
+
 .nav-menu li.active > .dropdown-menu-button {
     background-color: #1E6DC7;
 }
-  
+
 .nav-menu a {
     color: white;
     text-decoration: none;
@@ -71,11 +71,11 @@
     align-items: center;
     padding: 12px 20px;
 }
-  
+
 .nav-menu a i {
     margin-right: 15px;
 }
-  
+
 .dropdown-menu-button {
     cursor: pointer;
     padding: 12px 20px;
@@ -83,7 +83,7 @@
     justify-content: space-between;
     align-items: center;
 }
-  
+
 .dropdown-menu {
     display: none;
     padding-left: 20px;
@@ -92,22 +92,22 @@
     max-height: 0;
     transition: max-height 0.3s ease-in-out;
 }
-  
+
 .dropdown-menu li {
     padding: 8px 0;
 }
-  
+
 .dropdown-menu a {
     font-size: 14px;
     color: #b0c4de;
 }
-  
+
 .main-content {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
 }
-  
+
 .top-bar {
     background-color: #404040;
     height: 55px;
@@ -117,54 +117,46 @@
     padding: 0 20px;
     color: white;
 }
-  
+
 .content {
     flex-grow: 1;
     padding: 20px;
     overflow-y: auto;
     background-color: #f4f4f4;
 }
-  
+
 .menu-item.active .dropdown-menu {
     display: block;
     max-height: 500px;
 }
 
-@keyframes slideDown {
-    from {
-        max-height: 0;
-        opacity: 0;
-    }
-    to {
-        max-height: 500px;
-        opacity: 1;
-    }
-}
-  
-.nav-menu .menu-item {
-    padding: 10px 0;
-}
-
-.nav-lateral-list-menu ul li {
-    margin: 0;
-    padding: 0;
-    display: block;
-}
-
-.nav-lateral-list-menu ul li ul {
-    background-color: rgb(43, 61, 81);
-}
-
-.nav-lateral-list-menu ul li.active ul {
-    display: block;
-}
-
-.nav-lateral-list-menu ul li div {
+/* Estilos para submenús desplegables hacia la derecha */
+.submenu-item {
+    position: relative;
     cursor: pointer;
 }
 
-.nav-lateral-list-menu ul li ul li a {
-    padding-left: 30px;
-    color: #fff;
+.submenu {
+    position: absolute;
+    left: 100%;
+    top: 0;
+    background-color: #2B3D51;
+    min-width: 150px;
+    display: none;
+    z-index: 1000;
+}
+
+.menu-item .submenu-item:hover .submenu {
+    display: block;
+}
+
+.submenu a {
+    color: #b0c4de;
+    padding: 10px 15px;
+    display: block;
     text-decoration: none;
+}
+
+.submenu a:hover {
+    background-color: #1E6DC7;
 }
