--- a/REACT-PROJECT/tt-proyect/src/styles/IncomeDashboard.css
+++ b/REACT-PROJECT/tt-proyect/src/styles/IncomeDashboard.css
@@ -155,12 +155,12 @@
 
 /* Estilo para el día seleccionado */
 .rbc-day-bg.rbc-selected {
-  background-color: #3a88ec; /* Rojo */
+  background-color: #3a88ec; /* Azul */
   color: white;
 }
 
 .rbc-day-bg.rbc-selected:hover {
-  background-color: #3a88ec; /* Rojo más oscuro en hover */
+  background-color: #3a88ec; /* Azul más oscuro en hover */
 }
 
 /* Estilo para los días actuales */
