--- a/REACT-PROJECT/tt-proyect/src/styles/EditIncome.css
+++ b/REACT-PROJECT/tt-proyect/src/styles/EditIncome.css
@@ -42,3 +42,35 @@
 .form-control-checkbox {
     transform: scale(1.2);
 }
+.edit-user-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f9f9f9;
+  }
+  
+  .card {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .modal-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  
+  .btn {
+    width: 48%;
+  }
+  
