--- a/REACT-PROJECT/tt-proyect/src/styles/ExpenseDashboard.css
+++ b/REACT-PROJECT/tt-proyect/src/styles/ExpenseDashboard.css
@@ -187,3 +187,26 @@
   margin-top: 10px;
   width: 50px; /* Ajusta el tamaño del GIF */
 }
+.overlay {
+  position: fixed; /* Fija la superposición a toda la pantalla */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro con opacidad */
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Centra el contenido */
+  z-index: 9999; /* Asegura que esté encima de otros elementos */
+}
+
+.loading-message {
+  color: white;
+  font-size: 20px;
+  text-align: center;
+}
+
+.loading-image {
+  margin-top: 10px;
+  width: 50px; /* Ajusta el tamaño del GIF */
+}
